# Digital-wallet-Fastapi

./: .env.sample  .gitignore  README.md  pyproject.toml
performance-tests/: test_index.py
scripts/: initial-db.py  run-api.bat
tests/: conftest.py  test_item.py  test_merchant.py
wallet/: deps.py  main.py  security.py
wallet/models/: __init__.py  database.py  exchange_model.py  item_model.py  item_models.py  merchant_model.py  transaction_model.py  user_model.py  wallet_model.py
wallet/routes/: __init__.py  auth_router.py  exchange_router.py  item_router.py  merchant_router.py  transaction_router.py  transfer_router.py  user_router.py  wallet_router.py
